--- a/style.css
+++ b/style.css
@@ -32,3 +32,15 @@ nav ul li a {
     text-decoration: none;
     border-radius: 5px;
     }
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 50px;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+        }
